# momentum

./: LICENSE
momentum/: .env.example  README.md  pyproject.toml  requirements.txt
momentum/.streamlit/: config.toml
momentum/src/: main.py
momentum/src/components/: focus_sounds.py  progress_tracker.py  sidebar.py  todo.py
momentum/src/models/: task.py
momentum/src/services/: audio_manager.py  gemini_client.py  storage.py
momentum/src/utils/: helpers.py
momentum/tests/: test_todo.py
